# SkynetScout

./: .gitignore  README.md  do-docs.bash  do-tests-and-coverage.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
src/anamoly_detection/: CMakeLists.txt  README.md  package.xml
src/anamoly_detection/include/: AnomalyDetection.h  DetectCrack.h  DetectHazardObject.h  DetectMisAlignedBeams.h
src/anamoly_detection/include/anamoly_detection/: anamoly_beams_detect.h  anamoly_crack_detect.h  anamoly_detection.h  anamoly_object_detect.h
src/anamoly_detection/src/: AnomalyDetection.cc  DetectCrack.cc  DetectHazardObject.cc  DetectMisAlignedBeams.cc  anamoly_beams_detect.cc  anamoly_crack_detect.cc  anamoly_detection.cc  anamoly_object_detect.cc
src/anamoly_detection/test/: anamoly_detection_integration_test.cc  anamoly_detection_unit_test.cc
src/anomaly_detection/: CMakeLists.txt  README.md  package.xml
src/anomaly_detection/include/: AnomalyBase.h  AnomalyDetection.h  DetectCrack.h  DetectHazardObject.h  DetectMisAlignedBeams.h
src/anomaly_detection/launch/: anomaly_detection.launch.py  integration_test.launch.yaml
src/anomaly_detection/src/: AnomalyDetection.cc  DetectCrack.cc  DetectHazardObject.cc  DetectMisAlignedBeams.cc  anomaly_detection_node.cc
src/anomaly_detection/test/: anamoly_detection_unit_test.cc  anomaly_detection_integration_test.cc  anomaly_detection_unit_test.cc
src/skynet_config/: CMakeLists.txt  README.md  package.xml
src/skynet_interfaces/: CMakeLists.txt  README.md  package.xml
src/skynet_interfaces/msg/: Anamolies.msg  Anomalies.msg  AnomalyStatus.msg
src/skynet_interfaces/srv/: ReturnToHome.srv  StartInspection.srv
src/skynet_manager/: CMakeLists.txt  README.md  package.xml
src/skynet_manager/include/skynet_manager/: SkynetManager.h  manager.h
src/skynet_manager/launch/: integration_test.launch.yaml  turtlebot3_maze.launch.py  turtlebot3_waffle_construction.launch.py
src/skynet_manager/models/beam1/: model.config  model.sdf
src/skynet_manager/models/beam1_/: model.config  model.sdf
src/skynet_manager/models/beam1_clone/: model.config  model.sdf
src/skynet_manager/models/beam2/: model.config  model.sdf
src/skynet_manager/models/beam2_clone/: model.config  model.sdf
src/skynet_manager/models/beam2_white/: model.config  model.sdf
src/skynet_manager/models/crack_sim/materials/scripts/: crack.material
src/skynet_manager/models/crack_sim/meshes/grey_wall/: model.sdf
src/skynet_manager/models/grey wall/1/: model.sdf
src/skynet_manager/models/unit_cylinder/: model.sdf
src/skynet_manager/models/unit_cylinder_0/: model.sdf
src/skynet_manager/models/unit_cylinder_1/: model.sdf
src/skynet_manager/models/unit_cylinder_1_/: model.config  model.sdf
src/skynet_manager/models/unit_cylinder_3/: model.config  model.sdf
src/skynet_manager/models/unit_cylinder_clone/: model.sdf
src/skynet_manager/models/urban 2 story/1/: model.sdf
src/skynet_manager/models/urban 2 story/1/materials/scripts/: model.material
src/skynet_manager/src/: SkynetManager.cc  manager.cc
src/skynet_manager/test/: skynet_manager_integration_test.cc
src/skynet_manager/worlds/: construction_site_modv1.world
src/src_docs/: index.html  index.md
